# Athar-Fintech

./: .dockerignore  .gitignore  .replit  ARCHITECTURE.md  Dockerfile  README.md  deploy_build.sh  deploy_run.sh  frontend_full.txt  pyproject.toml  render.yaml  replit.md  start.sh  workflows_full.txt
.agents/memory/: MEMORY.md  dashboard-dto-fields.md  es256-jwt.md  flutter-test-env.md  spline-local-assets.md  tx-write-bug.md
.github/workflows/: firebase-hosting-merge.yml
athar_frontend/: .firebaserc  README.md  pubspec.yaml  setup_athar_frontend_v3.sh
athar_frontend/.firebase/: hosting.YnVpbGRcd2Vi.cache
attached_assets/: Pasted-Act-as-a-Lead-Data-Scientist-and-FinTech-Flutter-Archit_1784333430373.txt  Pasted-Act-as-a-Lead-FinTech-Architect-and-Senior-Flutter-Deve_1784340559677.txt  Pasted-Act-as-a-Lead-FinTech-Architect-and-Senior-Flutter-Deve_1784341984922.txt  Pasted-Act-as-a-Lead-FinTech-Architect-and-Senior-Flutter-UI-U_1784337888836.txt  Pasted-Act-as-a-Lead-FinTech-QA-Engineer-and-Senior-Full-Stack_1784344100033.txt  Pasted-Act-as-a-Lead-Flutter-Engineer-and-FinTech-UX-Designer-_1784343043350.txt  Pasted-Act-as-a-Senior-FinTech-Full-Stack-Architect-and-an-exp_1784331706132.txt  Pasted-Act-as-a-Senior-FinTech-Product-Manager-and-Lead-Develo_1784336149579.txt  Pasted-Act-as-a-Senior-FinTech-UX-UI-Architect-and-a-Lead-Data_1784334467245.txt
backend/: .dockerignore  Dockerfile  requirements.txt  test_integration.py
docs/: ALGORITHMS.md  DEPLOYMENT.md  replit.md  threat_model.md
scripts/: add_supabase_redirect.py  post-merge.sh  seed_demo.py
(+78 files in other folders)
