[project]
name = "athar-fintech"
version = "0.1.0"
description = "Athar FinTech backend — FastAPI + Supabase"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "supabase==2.11.0",
    "python-dotenv==1.0.1",
    "PyJWT==2.10.1",
    "cryptography==44.0.3",
    "slowapi==0.1.9",
    "limits==3.14.0",
]
